--- a/HTML5/GeoLocation.html
+++ b/HTML5/GeoLocation.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDuiDw7TZPGDoAhZO_ghj1ygRzp52V-mcw"></script>
+    <title>Geo Location</title>
+</head>
+<body onload="getLocation()">
 
-<p id="demo">Click the button to get your position.</p>
+<p id="demo">your location.</p>
 
-<button onclick="getLocation()">Try It</button>
+<button id="but">Click me for map</button>
 
-<div id="mapholder"></div>
+<div id="mapholder" style="width:500px;height:380px;"></div>
 
 <script>
+    var but = document.getElementById("but");
     var x = document.getElementById("demo");
+    var lat1;
+    var lon;
+    function initialize() {
+        var mapProp = {
+            center: new google.maps.LatLng(lat1,lon),
+            zoom: 7,
+            mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+
+        var map=new google.maps.Map(document.getElementById("mapholder"), mapProp);
+        var myLatLng = {lat: parseInt(lat1), lng: parseInt(lon)};
+        var marker = new google.maps.Marker({position: myLatLng, map: map});
+    }
+
+    google.maps.event.addDomListener(but, 'click', initialize);
 
     function getLocation() {
         if (navigator.geolocation) {
@@ -20,6 +40,8 @@
     }
 
     function showPosition(position) {
+        lat1 = position.coords.latitude;
+        lon = position.coords.longitude;
         var latlon = position.coords.latitude + "," + position.coords.longitude;
         x.innerHTML = position.coords.latitude +"<br>"+position.coords.longitude;
     }
